--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .btn-primary {
-  @apply
-} */
+.btn{
+  @apply w-16 py-2 px-3 hover:bg-indigo-600 bg-indigo-500 text-white text-sm font-semibold rounded-md transition-colors duration-100 ease-in-out shadow focus:outline-none
+}
